10_Challenge/solutions/app2.yml
apiVersion: v1
kind: Service
metadata:
    name: svc-app2
    labels:
        app: app2
spec:
    type: NodePort
    ports:
    - port: 5000
      nodePort: 30001
      protocol: TCP
    selector:
        app: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-app2
spec:
    replicas: 4
    selector:
        matchLabels:
            app: app2
    minReadySeconds: 10
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    template:
        metadata:
            labels:
                app: app2
        spec:
            containers:
            - name: app2
              image: mimaurer/hello-cisco:v1
              ports:
              - containerPort: 5000
