10_Challenge/solutions/app3.yml
apiVersion: v1
kind: Service
metadata:
    name: svc-app3
    labels:
        app: app3
spec:
    type: NodePort
    ports:
    - port: 5000
      nodePort: 30001
      protocol: TCP
    selector:
        app: app3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-app3
spec:
    replicas: 2
    selector:
        matchLabels:
            app: app3
    minReadySeconds: 10
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    template:
        metadata:
            labels:
                app: app3
        spec:
            containers:
            - name: app3
              image: mimaurer/hello-cisco:v1
              ports:
              - containerPort: 5000
