10_Challenge/solutions/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-sac
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        #volumeMounts:
        #- name: mysql-persistent-storage
          #mountPath: /var/lib/mysql
      #volumes:
      #- name: mysql-persistent-storage
        #persistentVolumeClaim:
          #claimName: mysql-pv-claim
