10_Challenge/solutions/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /example(/|$)(.*)
        backend:
          serviceName: svc-app1
          servicePort: 5000
